--- a/create_essay.html
+++ b/create_essay.html
@@ -15,10 +15,28 @@
         .form-group textarea#essay-content { min-height: 300px; resize: vertical; }
         .form-group input[type="file"] { display: block; margin-top: 5px; }
         .preview-area { margin-top: 10px; border: 1px dashed #ccc; padding: 10px; min-height: 50px; display: flex; justify-content: center; align-items: center; flex-direction: column; background-color: #f9f9f9; }
-        .preview-area img, .preview-area video { max-width: 100%; max-height: 300px; height: auto; display: block; margin-bottom: 10px; border:1px solid #eee; }
+        .preview-area img, .preview-area video { max-width: 100%; max-height: 300px; height: auto; display: none; margin-bottom: 10px; border:1px solid #eee; }
         .preview-area p.empty-preview-text { color: #aaa; font-style: italic; }
         .submit-button { background-color: #007bff; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; display: block; margin: 20px auto 0 auto; }
         .submit-button:hover { background-color: #0056b3; }
+        /* ★★★ 文字数カウンター用のスタイルを追加 ★★★ */
+        .label-with-counter {
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;
+        }
+        .char-counter {
+            font-size: 0.9em;
+            font-weight: normal;
+            color: #666;
+            background-color: #f0f0f0;
+            padding: 2px 6px;
+            border-radius: 4px;
+        }
+        .char-counter.error {
+            color: #d9534f;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -29,7 +47,7 @@
         </header>
         <main>
             <div id="left-column-container">
-                <!-- _left_column_logged_in.html が読み込まれる -->
+                <!-- script.jsによって _left_column_logged_in.html がここに読み込まれます -->
             </div>
 
             <div class="main-content-form">
@@ -37,18 +55,28 @@
                     <h2>随筆を執筆する</h2>
                     <form id="essay-form">
                         <div class="form-group">
-                            <label for="essay-title">タイトル:</label>
-                            <input type="text" id="essay-title" name="essay-title" required>
+                            <!-- ★★★ ラベルとカウンターをdivで囲み、カウンター用のspanを追加 ★★★ -->
+                            <div class="label-with-counter">
+                                <label for="essay-title">タイトル:</label>
+                                <span id="title-char-counter" class="char-counter">0/30</span>
+                            </div>
+                            <input type="text" id="essay-title" name="essay-title" required maxlength="30">
                         </div>
                         <div class="form-group">
-                            <label for="essay-content">本文:</label>
-                            <textarea id="essay-content" name="essay-content" required></textarea>
+                             <!-- ★★★ ラベルとカウンターをdivで囲み、カウンター用のspanを追加 ★★★ -->
+                            <div class="label-with-counter">
+                                <label for="essay-content">本文:</label>
+                                <span id="content-char-counter" class="char-counter">0/1000</span>
+                            </div>
+                            <textarea id="essay-content" name="essay-content" required maxlength="1000"></textarea>
                         </div>
                         <div class="form-group">
                             <label for="essay-media">メディアファイルを選択 (画像または動画, 任意):</label>
                             <input type="file" id="essay-media" name="essay-media" accept="image/*,video/*"> 
                             <div class="preview-area" id="media-preview-area">
-                                <p class="empty-preview-text">イメージ</p>  
+                                <p class="empty-preview-text" id="preview-text">プレビュー</p>
+                                <img id="image-preview" src="#" alt="画像プレビュー" style="display: none;">
+                                <video id="video-preview" src="#" controls muted playsinline style="display: none;"></video>
                             </div>
                         </div>
                         <button type="submit" class="submit-button">投稿する</button>
@@ -62,12 +90,7 @@
     <script src="script.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            if (typeof loadHTMLPart === 'function') {
-                loadHTMLPart('_left_column_logged_in.html', 'left-column-container', null, () => {
-                    if (typeof initializeLeftColumnContent === "function") { initializeLeftColumnContent(); }
-                    if (typeof initializeCreateEssayPage === "function") { initializeCreateEssayPage(); }
-                });
-            } else { console.error("loadHTMLPart function is not defined on create_essay.html."); }
+            console.log("create_essay.html is loaded. App.init() in script.js will handle everything.");
         });
     </script>
 </body>
