--- a/notifications.html
+++ b/notifications.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>一目瞭然 - 座の人</title> <!-- ★変更: (通知) を削除 -->
+    <title>一目瞭然 - 座の人</title>
     <link rel="stylesheet" href="style.css">
     <style>
         /* notifications.html 固有のスタイル */
@@ -59,8 +59,8 @@
         }
         .notification-unread {
             background-color: #f8f9fa;
-            border-left: 4px solid #6c757d; /* ★変更: 青から濃いグレー (#6c757d) に変更 */
-            padding-left: 11px; /* 境界線とのスペースを維持するため、元の15px - 4px = 11px */
+            border-left: 4px solid #6c757d;
+            padding-left: 11px;
         }
     </style>
 </head>
@@ -78,11 +78,11 @@
 
         <main>
             <div id="left-column-container">
-                <!-- _left_column_logged_in.html が読み込まれる -->
+                <!-- script.jsによって _left_column_logged_in.html がここに読み込まれます -->
             </div>
 
             <div class="main-content-notifications">
-                <h2>一目瞭然</h2> <!-- ★変更: (通知) を削除 -->
+                <h2>一目瞭然</h2>
                 <ul id="notification-list-area" class="notification-list">
                     <!-- script.jsによって通知がここに挿入されます -->
                 </ul>
@@ -97,23 +97,12 @@
     <script src="load_parts.js"></script>
     <script src="script.js"></script>
     <script>
+        // ★★★ インラインスクリプトを簡素化 ★★★
+        // script.js 内の App.init() がページのパスを判定して、
+        // このページの初期化（部品読み込み、データ描画など）を
+        // すべて自動的に行ってくれます。
         document.addEventListener('DOMContentLoaded', () => {
-            if (typeof loadHTMLPart === 'function') {
-                loadHTMLPart('_left_column_logged_in.html', 'left-column-container', null, () => {
-                    // console.log("CALLBACK: Left column loaded into notifications.html.");
-                    if (typeof initializeLeftColumnContent === "function") {
-                        initializeLeftColumnContent();
-                    }
-                    if (typeof initializeNotificationsPage === "function") {
-                        // console.log("CALLBACK: Calling initializeNotificationsPage...");
-                        initializeNotificationsPage();
-                    } else {
-                        console.error("CALLBACK: initializeNotificationsPage is not defined!");
-                    }
-                });
-            } else {
-                console.error("loadHTMLPart function is not defined on notifications.html.");
-            }
+            console.log("notifications.html is loaded. App.init() in script.js will handle everything.");
         });
     </script>
 </body>
