--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         /* profile.html 固有のスタイル */
-        .main-content-profile { /* style.cssの共通クラスに合わせる */
+        .main-content-profile {
             padding: 20px;
             background-color: #fff;
         }
@@ -37,7 +37,6 @@
         .recent-essays-section { margin-top: 40px; }
         .recent-essays-section h3 { font-size: 1.6em; margin-bottom: 20px; padding-bottom: 10px; border-bottom: 1px solid #ddd; }
         #recent-profile-essays-list { list-style: none; padding: 0; margin: 0; }
-        /* .essay-item-logged-in スタイルは style.css のものを流用 */
     </style>
 </head>
 <body>
@@ -53,16 +52,17 @@
         </header>
         <main>
             <div id="left-column-container">
-                <!-- _left_column_logged_in.html が読み込まれる -->
+                <!-- script.jsによって _left_column_logged_in.html がここに読み込まれます -->
             </div>
-            <div class="main-content-profile"> <!-- ★クラス名を style.css の共通クラスに合わせる -->
+            <div class="main-content-profile">
                 <div class="profile-header">
                     <h2>プロフィール</h2>
                     <button id="edit-profile-button" class="edit-button">編集</button>
                 </div>
                 <div class="profile-info" id="profile-display">
                     <div class="profile-image-container">
-                        <img src="default_user.png" alt="プロフィール画像" class="profile-image" id="display-profile-image">
+                        <!-- ★画像パスを統一 -->
+                        <img src="default_user_thumb.png" alt="プロフィール画像" class="profile-image" id="display-profile-image">
                     </div>
                     <div class="profile-details">
                         <p><strong>ユーザー名:</strong> <span id="display-username">[ユーザー名]</span></p>
@@ -78,7 +78,7 @@
                         <p><strong>表向きの趣味:</strong> <span id="display-public_hobby">[表向きの趣味]</span></p>
                         <p><strong>ここでしか言えない趣味:</strong> <span id="display-private_hobby">[ここでしか言えない趣味]</span></p>
                         <p><strong>特技:</strong> <span id="display-skill">[特技]</span></p>
-                        <p><strong>好きなマンガ:</strong> <span id="display-favorite_manga">[好きなマンガ]</span></p>
+                        <p><strong>好きなマンガ:</strong> <span id="display-favorite_manga">[好きなマンга]</span></p>
                         <p><strong>好きな映画・アニメ・ラジオ:</strong> <span id="display-favorite_media">[好きな映画・アニメ・ラジオ]</span></p>
                         <p><strong>座右の銘:</strong> <span id="display-motto">[座右の銘]</span></p>
                         <p><strong>必殺技:</strong> <span id="display-ultimate_skill">[必殺技]</span></p>
@@ -88,7 +88,7 @@
                 </div>
                 <form id="profile-edit-form" class="profile-edit-form">
                     <h3>プロフィール編集</h3>
-                    <div><label for="edit_profile_image">プロフィール画像:</label><input type="file" id="edit_profile_image" name="profile_image" accept="image/*"><img src="default_user.png" alt="プレビュー" id="image-preview"></div>
+                    <div><label for="edit_profile_image">プロフィール画像:</label><input type="file" id="edit_profile_image" name="profile_image" accept="image/*"><img src="default_user_thumb.png" alt="プレビュー" id="image-preview"></div>
                     <div><label for="edit_username">ユーザー名:</label><input type="text" id="edit_username" name="username" required></div>
                     <div><label for="edit_age">年齢:</label><input type="text" id="edit_age" name="age"></div>
                     <div><label for="edit_gender">性別:</label><select id="edit_gender" name="gender"><option value="">選択してください</option><option value="male">男性</option><option value="female">女性</option><option value="other">その他</option></select></div>
@@ -127,178 +127,12 @@
     <script src="load_parts.js"></script>
     <script src="script.js"></script>
     <script>
+        // ★★★ インラインスクリプトを大幅に簡素化 ★★★
+        // script.js 内の App.init() がページのパスを判定して、
+        // プロフィールページの初期化（部品読み込み、データ描画、イベント設定など）を
+        // すべて自動的に行ってくれます。
         document.addEventListener('DOMContentLoaded', () => {
-            console.log("DOMContentLoaded for profile.html inline script.");
-            if (typeof loadHTMLPart === 'function') {
-                console.log("Calling loadHTMLPart for _left_column_logged_in.html on profile.html...");
-                loadHTMLPart('_left_column_logged_in.html', 'left-column-container', null, () => {
-                    console.log("CALLBACK: Left column loaded into profile.html by loadHTMLPart.");
-                    if (typeof initializeLeftColumnContent === "function") {
-                        console.log("CALLBACK: Calling initializeLeftColumnContent for profile.html...");
-                        initializeLeftColumnContent();
-                    } else {
-                        console.error("CALLBACK: initializeLeftColumnContent is not defined on profile.html!");
-                    }
-                    // プロフィールページ専用のメインコンテンツ初期化関数を呼び出す
-                    if (typeof initializeProfilePage === "function") {
-                        console.log("CALLBACK: Calling initializeProfilePage for profile.html...");
-                        initializeProfilePage();
-                    } else {
-                        console.error("CALLBACK: initializeProfilePage is not defined on profile.html!");
-                    }
-                });
-            } else {
-                console.error("loadHTMLPart function is not defined on profile.html.");
-            }
-
-            // 既存のプロフィール編集関連のインラインJavaScriptは、
-            // initializeProfilePage 関数内で処理するように script.js に移すことを推奨します。
-            // ここに残す場合は、script.js側のグローバル関数と連携させる必要があります。
-            // 今回は、script.js の initializeProfilePage で最近の随筆リストを描画し、
-            // プロフィール編集ロジックは、このインラインスクリプトで引き続き動作させることを想定します。
-            // (ただし、localStorageのキー名は script.js の currentLoggedInUser と合わせる必要があります)
-
-            const editProfileButton = document.getElementById('edit-profile-button');
-            const profileDisplay = document.getElementById('profile-display');
-            const profileEditForm = document.getElementById('profile-edit-form');
-            const cancelEditButton = document.getElementById('cancel-edit-button');
-            const form = document.getElementById('profile-edit-form');
-            const imagePreview = document.getElementById('image-preview');
-            const editProfileImageInput = document.getElementById('edit_profile_image');
-            const displayProfileImage = document.getElementById('display-profile-image');
-
-            const profileFields = {
-                username: { display: 'display-username', edit: 'edit_username' },
-                age: { display: 'display-age', edit: 'edit_age' },
-                gender: { display: 'display-gender', edit: 'edit_gender' },
-                blood_type: { display: 'display-blood_type', edit: 'edit_blood_type' },
-                star_sign: { display: 'display-star_sign', edit: 'edit_star_sign' },
-                residence: { display: 'display-residence', edit: 'edit_residence' },
-                height: { display: 'display-height', edit: 'edit_height' },
-                favorite_celebrity: { display: 'display-favorite_celebrity', edit: 'edit_favorite_celebrity' },
-                favorite_type: { display: 'display-favorite_type', edit: 'edit_favorite_type' },
-                favorite_food: { display: 'display-favorite_food', edit: 'edit_favorite_food' },
-                public_hobby: { display: 'display-public_hobby', edit: 'edit_public_hobby' },
-                private_hobby: { display: 'display-private_hobby', edit: 'edit_private_hobby' },
-                skill: { display: 'display-skill', edit: 'edit_skill' },
-                favorite_manga: { display: 'display-favorite_manga', edit: 'edit_favorite_manga' },
-                favorite_media: { display: 'display-favorite_media', edit: 'edit_favorite_media' },
-                motto: { display: 'display-motto', edit: 'edit_motto' },
-                ultimate_skill: { display: 'display-ultimate_skill', edit: 'edit_ultimate_skill' },
-                disliked_person: { display: 'display-disliked_person', edit: 'edit_disliked_person' },
-                future_dream: { display: 'display-future_dream', edit: 'edit_future_dream' }
-            };
-            const genderMap = { "": "-", "male": "男性", "female": "女性", "other": "その他" };
-
-            function loadProfileDataFromStorage() { // 関数名を変更
-                const storedProfile = localStorage.getItem('userProfile'); // script.js と同じキー名
-                return storedProfile ? JSON.parse(storedProfile) : {};
-            }
-            let userProfileData = loadProfileDataFromStorage(); // 変数名を変更
-
-            function updateProfileDisplayElements() { // 関数名を変更
-                for (const key in profileFields) {
-                    const displayEl = document.getElementById(profileFields[key].display);
-                    if (displayEl) {
-                        if (key === 'gender') {
-                            displayEl.textContent = genderMap[userProfileData[key]] || '-';
-                        } else {
-                            displayEl.textContent = userProfileData[key] || '-';
-                        }
-                    }
-                }
-                displayProfileImage.src = userProfileData.profileImage || 'default_user.png';
-                // 左カラムのユーザー情報も更新 (script.jsのcurrentLoggedInUserと同期)
-                if (window.currentLoggedInUser) {
-                    window.currentLoggedInUser.name = userProfileData.username || "座の人ユーザー";
-                    window.currentLoggedInUser.profileImageUrl = userProfileData.profileImage || null;
-                    if (typeof initializeLeftColumnContent === "function") {
-                        initializeLeftColumnContent(); // 左カラムを再描画
-                    }
-                }
-            }
-
-            function populateEditFormElements() { // 関数名を変更
-                for (const key in profileFields) {
-                    const editEl = document.getElementById(profileFields[key].edit);
-                    if (editEl) {
-                        editEl.value = userProfileData[key] || '';
-                    }
-                }
-                imagePreview.src = userProfileData.profileImage || 'default_user.png';
-            }
-
-            updateProfileDisplayElements();
-            populateEditFormElements();
-
-            if(editProfileButton) {
-                editProfileButton.addEventListener('click', (e) => {
-                    e.preventDefault();
-                    userProfileData = loadProfileDataFromStorage(); // 編集開始時に最新データを再読み込み
-                    populateEditFormElements();
-                    profileDisplay.style.display = 'none';
-                    profileEditForm.style.display = 'block';
-                });
-            }
-
-            if(cancelEditButton) {
-                cancelEditButton.addEventListener('click', () => {
-                    profileEditForm.style.display = 'none';
-                    profileDisplay.style.display = 'block';
-                    populateEditFormElements(); // フォームの内容を元に戻す
-                    imagePreview.src = userProfileData.profileImage || 'default_user.png';
-                    editProfileImageInput.value = '';
-                });
-            }
-
-            if(editProfileImageInput) {
-                editProfileImageInput.addEventListener('change', (e) => {
-                    const file = e.target.files[0];
-                    if (file) {
-                        const reader = new FileReader();
-                        reader.onload = (event) => { imagePreview.src = event.target.result; }
-                        reader.readAsDataURL(file);
-                    } else {
-                        imagePreview.src = userProfileData.profileImage || 'default_user.png';
-                    }
-                });
-            }
-
-            if(form) {
-                form.addEventListener('submit', (event) => {
-                    event.preventDefault();
-                    const newProfileData = {};
-                    for (const key in profileFields) {
-                        const editEl = document.getElementById(profileFields[key].edit);
-                        if (editEl) {
-                            newProfileData[key] = editEl.value;
-                        }
-                    }
-
-                    const profileImageFile = editProfileImageInput.files[0];
-                    if (profileImageFile) {
-                        const reader = new FileReader();
-                        reader.onloadend = () => {
-                            newProfileData.profileImage = reader.result;
-                            userProfileData = { ...userProfileData, ...newProfileData }; // 更新
-                            localStorage.setItem('userProfile', JSON.stringify(userProfileData));
-                            updateProfileDisplayElements();
-                            profileDisplay.style.display = 'block';
-                            profileEditForm.style.display = 'none';
-                            alert('プロフィールを保存しました！');
-                        }
-                        reader.readAsDataURL(profileImageFile);
-                    } else {
-                        newProfileData.profileImage = userProfileData.profileImage; // 既存の画像を維持
-                        userProfileData = { ...userProfileData, ...newProfileData }; // 更新
-                        localStorage.setItem('userProfile', JSON.stringify(userProfileData));
-                        updateProfileDisplayElements();
-                        profileDisplay.style.display = 'block';
-                        profileEditForm.style.display = 'none';
-                        alert('プロフィールを保存しました！');
-                    }
-                });
-            }
+            console.log("profile.html is loaded. App.init() in script.js will handle everything.");
         });
     </script>
 </body>
