--- a/create_essay.html
+++ b/create_essay.html
@@ -14,29 +14,19 @@
         .form-group input[type="text"], .form-group textarea { width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
         .form-group textarea#essay-content { min-height: 300px; resize: vertical; }
         .form-group input[type="file"] { display: block; margin-top: 5px; }
-        .preview-area { margin-top: 10px; border: 1px dashed #ccc; padding: 10px; min-height: 50px; display: flex; justify-content: center; align-items: center; flex-direction: column; background-color: #f9f9f9; }
+        .preview-area { margin-top: 10px; border: 1px dashed #ccc; padding: 10px; min-height: 50px; display: flex; justify-content: center; align-items: center; flex-direction: column; background-color: #f9f9f9; position: relative; }
         .preview-area img, .preview-area video { max-width: 100%; max-height: 300px; height: auto; display: none; margin-bottom: 10px; border:1px solid #eee; }
         .preview-area p.empty-preview-text { color: #aaa; font-style: italic; }
+        /* ★ YouTubeプレビュー用のスタイルを追加 */
+        .youtube-preview-container { display: none; width: 100%; aspect-ratio: 16 / 9; }
+        .youtube-preview-container iframe { width: 100%; height: 100%; border: none; }
         .submit-button { background-color: #007bff; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; display: block; margin: 20px auto 0 auto; }
         .submit-button:hover { background-color: #0056b3; }
-        /* ★★★ 文字数カウンター用のスタイルを追加 ★★★ */
-        .label-with-counter {
-            display: flex;
-            justify-content: space-between;
-            align-items: baseline;
-        }
-        .char-counter {
-            font-size: 0.9em;
-            font-weight: normal;
-            color: #666;
-            background-color: #f0f0f0;
-            padding: 2px 6px;
-            border-radius: 4px;
-        }
-        .char-counter.error {
-            color: #d9534f;
-            font-weight: bold;
-        }
+        .label-with-counter { display: flex; justify-content: space-between; align-items: baseline; }
+        .char-counter { font-size: 0.9em; font-weight: normal; color: #666; background-color: #f0f0f0; padding: 2px 6px; border-radius: 4px; }
+        .char-counter.error { color: #d9534f; font-weight: bold; }
+        /* ★ or-divider スタイルを追加 */
+        .or-divider { text-align: center; margin: 10px 0; color: #888; }
     </style>
 </head>
 <body>
@@ -46,37 +36,34 @@
             <nav><ul><li><a href="logged_in.html">ホーム</a></li><li><a href="bulletinboard.html">掲示板</a></li></ul></nav>
         </header>
         <main>
-            <div id="left-column-container">
-                <!-- script.jsによって _left_column_logged_in.html がここに読み込まれます -->
-            </div>
-
+            <div id="left-column-container"></div>
             <div class="main-content-form">
                 <div class="editor-form-inner">
                     <h2>随筆を執筆する</h2>
                     <form id="essay-form">
                         <div class="form-group">
-                            <!-- ★★★ ラベルとカウンターをdivで囲み、カウンター用のspanを追加 ★★★ -->
-                            <div class="label-with-counter">
-                                <label for="essay-title">タイトル:</label>
-                                <span id="title-char-counter" class="char-counter">0/30</span>
-                            </div>
+                            <div class="label-with-counter"><label for="essay-title">タイトル:</label><span id="title-char-counter" class="char-counter">0/30</span></div>
                             <input type="text" id="essay-title" name="essay-title" required maxlength="30">
                         </div>
                         <div class="form-group">
-                             <!-- ★★★ ラベルとカウンターをdivで囲み、カウンター用のspanを追加 ★★★ -->
-                            <div class="label-with-counter">
-                                <label for="essay-content">本文:</label>
-                                <span id="content-char-counter" class="char-counter">0/1000</span>
-                            </div>
+                            <div class="label-with-counter"><label for="essay-content">本文:</label><span id="content-char-counter" class="char-counter">0/1000</span></div>
                             <textarea id="essay-content" name="essay-content" required maxlength="1000"></textarea>
                         </div>
                         <div class="form-group">
                             <label for="essay-media">メディアファイルを選択 (画像または動画, 任意):</label>
                             <input type="file" id="essay-media" name="essay-media" accept="image/*,video/*"> 
+                            
+                            <!-- ★★★ or-dividerとYouTube URL入力欄を追加 ★★★ -->
+                            <div class="or-divider">または</div>
+                            <label for="essay-youtube-url">YouTube動画のURLを貼り付け:</label>
+                            <input type="text" id="essay-youtube-url" name="essay-youtube-url" placeholder="例: https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+
                             <div class="preview-area" id="media-preview-area">
                                 <p class="empty-preview-text" id="preview-text">プレビュー</p>
                                 <img id="image-preview" src="#" alt="画像プレビュー" style="display: none;">
                                 <video id="video-preview" src="#" controls muted playsinline style="display: none;"></video>
+                                <!-- ★★★ YouTubeプレビュー用のコンテナを追加 ★★★ -->
+                                <div id="youtube-preview" class="youtube-preview-container"></div>
                             </div>
                         </div>
                         <button type="submit" class="submit-button">投稿する</button>
@@ -89,9 +76,7 @@
     <script src="load_parts.js"></script>
     <script src="script.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            console.log("create_essay.html is loaded. App.init() in script.js will handle everything.");
-        });
+        document.addEventListener('DOMContentLoaded', () => { console.log("create_essay.html is loaded. App.init() in script.js will handle everything."); });
     </script>
 </body>
 </html>
